--- a/.editorconfig
+++ b/.editorconfig
@@ -4,4 +4,17 @@ indent_size = 2
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
-max_line_length = 100
+max_line_length = 160
+no-misused-new= true
+no-non-null-assertion= true
+no-shadowed-variable= true
+no-string-literal= false
+no-string-throw= true
+no-switch-case-fall-through= true
+no-trailing-whitespace= true
+no-unnecessary-initializer= true
+no-unused-expression= true
+no-unused-variable= false
+no-use-before-declare= true
+no-var-keyword= true
+semicolon = true
